--- a/demofragswitch/src/main/res/layout/f02_signup.xml
+++ b/demofragswitch/src/main/res/layout/f02_signup.xml
@@ -1,29 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#55b440">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#38a861">
 
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-    <RatingBar
-        android:id="@+id/ratingBar"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent">
 
-    <QuickContactBadge
-        android:id="@+id/quickContactBadge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        <LinearLayout
+            android:id="@+id/lLayout_kf06_resident_away"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/txtVw_kf06_resident_away"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textColor="@color/colorPrimary"
+                android:textSize="45sp"
+                android:text="How Long Away?" />
+
+
+        </LinearLayout>
+
+
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/lLayout_kf06_resident_away"
+            android:id="@+id/radioGp_kf06_resident_away">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:baselineAligned="false"
+                tools:ignore="UselessParent">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="150dp"
+                    tools:ignore="RtlHardcoded">
+                    <RadioButton
+                        android:id="@+id/radio_kf06_1_2_hours"
+                        style="@style/radionbutton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1-2 hours"
+                        android:layout_gravity="left"
+                        android:checked="false"
+                        android:textSize="25sp"
+                        android:paddingStart="20dp"
+                        android:layout_marginTop="150dp"
+                        android:textColor="#FFF"
+                        tools:ignore="NestedWeights,RtlSymmetry" />
+
+                    <RadioButton
+                        android:id="@+id/radio_kf06_halfday"
+                        style="@style/radionbutton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Half Day"
+                        android:layout_gravity="left"
+                        android:checked="false"
+                        android:textSize="25sp"
+                        android:textColor="#FFF"
+                        android:paddingStart="20dp"
+                        android:layout_marginTop="50dp"
+                        tools:ignore="NestedWeights,RtlSymmetry"/>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="50dp"
+                    tools:ignore="RtlHardcoded">
+                    <RadioButton
+                        android:id="@+id/radio_kf06_allday"
+                        style="@style/radionbutton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="All Day"
+                        android:layout_gravity="left"
+                        android:checked="false"
+                        android:textSize="25sp"
+                        android:textColor="#FFF"
+                        android:paddingStart="20dp"
+                        android:layout_marginTop="150dp"
+                        tools:ignore="NestedWeights,RtlSymmetry"/>
+
+                    <RadioButton
+                        android:id="@+id/radio_kf06_moreday"
+                        style="@style/radionbutton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="More than a Day"
+                        android:layout_gravity="left"
+                        android:checked="false"
+                        android:textSize="25sp"
+                        android:textColor="#FFF"
+                        android:paddingStart="20dp"
+                        android:layout_marginTop="50dp"
+                        tools:ignore="NestedWeights,RtlSymmetry,RtlHardcoded"/>
+
+
+                </LinearLayout>
+            </LinearLayout>
+        </RadioGroup>
+    </RelativeLayout>
 
     <Button
         android:id="@+id/button_SignUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Show Dashboard" />
-</LinearLayout>
+        android:text="Show Dashboard"
+        android:layout_alignParentBottom="true"/>
+
+</RelativeLayout>
