Retrofit sample programs added for the API.

--- a/batterylogs/src/main/res/layout/activity_main.xml
+++ b/batterylogs/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rLyaout_activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.batterylogs.MainActivity">
@@ -14,7 +15,7 @@
         android:background="#494949"
         android:layout_alignParentBottom="true">
         <RelativeLayout
-            android:layout_width="60dp"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true">
             <ImageView
@@ -23,6 +24,14 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_battery_20_black_24dp"/>
+
+            <ImageView
+                android:id="@+id/imgVw_Settings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_build_white_24dp"/>
 
         </RelativeLayout>
 
