--- a/rndwebview/src/main/res/layout/userselectedweb.xml
+++ b/rndwebview/src/main/res/layout/userselectedweb.xml
@@ -3,30 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/colorPrimaryDark">
 
 
-
-    <Button
-        android:id="@+id/button_prev"
-        android:text="@string/btn_prev"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:id="@+id/btns_container"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_width="wrap_content"/>
-    <Button
-    android:id="@+id/button_use"
-    android:text="@string/btn_use"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentStart="true"
-    android:layout_width="wrap_content"/>
+        android:background="#80000000">
+        <Button
+            android:id="@+id/button_prev"
+            android:text="@string/btn_prev"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_width="wrap_content"/>
+        <Button
+            android:id="@+id/button_use"
+            android:text="@string/btn_copy"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"/>
+    </RelativeLayout>
 
     <com.rndwebview.TouchyWebView
         android:id="@+id/myWebVw"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/button_prev"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/btns_container"
         />
 
 </RelativeLayout>
